<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createUser.CreateUserActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/edit_input_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/usual_end_margin"
        android:layout_marginBottom="@dimen/usual_end_margin"
        android:text="@string/no_account_text_display"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="@dimen/edit_input_text_width"
        android:layout_height="@dimen/edit_input_text_height"
        android:layout_marginBottom="@dimen/usual_end_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/ime" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="@dimen/edit_input_text_width"
        android:layout_height="@dimen/edit_input_text_height"
        android:layout_marginBottom="@dimen/usual_end_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prezime" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/usual_end_margin"
        android:layout_marginBottom="@dimen/usual_end_margin"
        android:text="@string/date_of_birth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/tvDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_end_margin"
        android:layout_marginLeft="@dimen/usual_end_margin"
        android:layout_marginTop="@dimen/usual_end_margin"
        android:layout_marginEnd="@dimen/usual_end_margin"
        android:layout_marginRight="@dimen/usual_end_margin"
        android:layout_marginBottom="@dimen/usual_end_margin"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDateOfBirth"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/usual_end_margin"
        android:layout_marginLeft="@dimen/usual_end_margin"
        android:layout_marginTop="@dimen/usual_end_margin"
        android:layout_marginEnd="@dimen/usual_end_margin"
        android:layout_marginRight="@dimen/usual_end_margin"
        android:layout_marginBottom="@dimen/usual_end_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/usual_padding"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateOfBirth" />


</androidx.constraintlayout.widget.ConstraintLayout>